DBAU-395 Fixed conflict of content
Added the changes done on Master by Sami: Text updates and Ticktok option.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").hide() &&
 			$("#mediumSocialAdLinkedinAdType").hide() &&
 			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -161,6 +162,7 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").hide() &&
 			$("#mediumSocialAdLinkedinAdType").hide() &&
 			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -183,6 +185,7 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").show() &&
 			$("#mediumSocialAdLinkedinAdType").hide() &&
 			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -205,6 +208,7 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").show() &&
 			$("#mediumSocialAdLinkedinAdType").hide() &&
 			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -227,6 +231,7 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").hide() &&
 			$("#mediumSocialAdLinkedinAdType").show() &&
 			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -249,6 +254,7 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").hide() &&
 			$("#mediumSocialAdLinkedinAdType").show() &&
 			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -271,6 +277,7 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").hide() &&
 			$("#mediumSocialAdLinkedinAdType").hide() &&
 			$("#mediumSocialAdYoutubeAdType").show() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -293,6 +300,53 @@ $(window).load(function(){
 			$("#mediumSocialAdTwitterAdType").hide() &&
 			$("#mediumSocialAdLinkedinAdType").hide() &&
 			$("#mediumSocialAdYoutubeAdType").show() &&
+			$("#mediumSocialAdTikTokAdType").hide() &&
+			$("#mediumSocialPost").hide() &&
+			$("#mediumSocialShare").hide() &&
+			$("#mediumSocialButton").hide() &&
+			$("#mediumReferral").hide() &&
+			$("#mediumInternal").hide() &&
+			$("#mediumOffline").hide() &&
+			$("#mediumOther").hide() &&
+			$("#mediumRocketseed").hide() &&
+			$(".showUrlBox").show() &&
+			$("#urlHidden").hide();
+
+		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "Yes" && $("#socialadsource").val() === "TikTok" )
+	        $("#mediumPPCSearch").hide() &&
+			$("#mediumOrganicSearch").hide() &&
+			$("#mediumBanner").hide() &&
+			$("#mediumEmail").hide() &&
+			$("#mediumSocialAd").show() &&
+			$("#mediumSocialAdOwnSourceCodes").show() &&
+			$("#mediumSocialAdFacebookAdType").hide() &&
+			$("#mediumSocialAdTwitterAdType").hide() &&
+			$("#mediumSocialAdLinkedinAdType").hide() &&
+			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").show() &&
+			$("#mediumSocialPost").hide() &&
+			$("#mediumSocialShare").hide() &&
+			$("#mediumSocialButton").hide() &&
+			$("#mediumReferral").hide() &&
+			$("#mediumInternal").hide() &&
+			$("#mediumOffline").hide() &&
+			$("#mediumOther").hide() &&
+			$("#mediumRocketseed").hide() &&
+			$(".showUrlBox").show() &&
+			$("#urlHidden").hide();
+			
+		else if ($("#medium").val() === "Social Ad" && $("#socialadownsourcecode").val() === "No" && $("#socialadsource").val() === "TikTok" )
+	        $("#mediumPPCSearch").hide() &&
+			$("#mediumOrganicSearch").hide() &&
+			$("#mediumBanner").hide() &&
+			$("#mediumEmail").hide() &&
+			$("#mediumSocialAd").show() &&
+			$("#mediumSocialAdOwnSourceCodes").hide() &&
+			$("#mediumSocialAdFacebookAdType").hide() &&
+			$("#mediumSocialAdTwitterAdType").hide() &&
+			$("#mediumSocialAdLinkedinAdType").hide() &&
+			$("#mediumSocialAdYoutubeAdType").hide() &&
+			$("#mediumSocialAdTikTokAdType").show() &&
 			$("#mediumSocialPost").hide() &&
 			$("#mediumSocialShare").hide() &&
 			$("#mediumSocialButton").hide() &&
@@ -658,7 +712,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being advertised?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="bannerlinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -670,6 +724,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1016,13 +1073,14 @@ $(window).load(function(){
 		<option value="Facebook">Facebook</option>
 		<option value="Instagram">Instagram</option>
 		<option value="LinkedIn">LinkedIn</option>
+		<option value="TikTok">TikTok</option>
 		<option value="Twitter">Twitter</option>
 		<option value="Youtube">Youtube</option>
 		</select>
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being advertised?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="socialadlinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1094,6 +1152,19 @@ $(window).load(function(){
 		<option value="Display">Display ads (banners on watch pages)</option>
 		<option value="Overlay">In-video overlay ads</option>
 		<option value="Masthead">Mastheads (hero area on Youtube homepage)</option>
+		</select>
+        </label>
+        </p>
+	</div>
+	<div id="mediumSocialAdTikTokAdType">
+        <p>
+        <label for="adtype">What <a href="https://www.tiktok.com/business/en-GB/apps/tiktok" target="_blank">TikTok ad format</a> is it?
+        <select name="adtype" id="socialadadtype_tiktok">
+		<option value="In Feed">In Feed (in the "For You" feed)</option>
+		<option value="Brand Takeover">Takeover (on app open, short)</option>
+		<option value="TopView">TopView (on app open, long)</option>
+		<option value="Branded Effects">Effects (filters, stickers, special effects)</option>
+		<option value="Branded Hashtag Challenge">Hashtag Challenge (aggregate user-generated content)</option>
 		</select>
         </label>
         </p>
@@ -1188,7 +1259,7 @@ $(window).load(function(){
 		<input name="sourcecode" id="socialpostsourcecode" value="170464" type="hidden">
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being shared?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="socialpostlinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1200,6 +1271,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1235,11 +1309,14 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being shared?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="socialsharelinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1251,6 +1328,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1282,7 +1362,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being shared?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="socialbuttonlinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1294,6 +1374,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1325,7 +1408,7 @@ $(window).load(function(){
 		<input name="audience" id="internalaudience" value="BRC Site" type="hidden">
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being shared?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="internallinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1337,6 +1420,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1354,8 +1440,9 @@ $(window).load(function(){
 		<option value="Direct Mail">Direct mail</option>
 		<option value="Door Drop">Door drop</option>
         <option value="DRTV">DRTV</option>
-        <option value="Press">Press</option>
         <option value="Inserts">Inserts</option>
+        <option value="Partially Addressed Mail">Partially Addressed Mail</option>
+        <option value="Press">Press</option>
 		</select>
         </label>
         </p>
@@ -1371,7 +1458,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being shared?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="offlinelinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1383,8 +1470,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
-		<option value="Brand">Integrated campaign goal = brand</option>
-		<option value="Fundraising">Integrated campaign goal = fundraising</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1409,7 +1497,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being shared?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="otherlinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1421,8 +1509,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
-		<option value="Brand">Integrated campaign goal = brand</option>
-		<option value="Fundraising">Integrated campaign goal = fundraising</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1444,7 +1533,7 @@ $(window).load(function(){
 		<input name="medium" id="rocketseedmedium" value="Banner" type="hidden">
         </p>
         <p>
-        <label for="linkcategory">What link from our site is being shared?
+        <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
         <select name="linkcategory" id="rocketseedlinkcategory">
 		<option value="Donate Landing">Donate - Landing</option>
 		<option value="Donate Other">Donate - Other</option>
@@ -1456,6 +1545,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
@@ -1630,6 +1722,9 @@ $(window).load(function(){
 					}
 				if (source == "Youtube") {
 					adCreative = adCreative + '_' + $('#socialadadtype_youtube').val();
+					}
+				if (source == "TikTok") {
+					adCreative = adCreative + '_' + $('#socialadadtype_tiktok').val();
 					}
 				if ($('#socialadadcreative').val()) {
 					adCreative = adCreative + '_' + $('#socialadadcreative').val();}
