Added missing Awareness/Consideration/Action

--- a/index.html
+++ b/index.html
@@ -1092,8 +1092,9 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
-		<option value="Brand">Integrated campaign goal = brand</option>
-		<option value="Fundraising">Integrated campaign goal = fundraising</option>
+		<option value="Awareness">Integrated campaign goal = awareness</option>
+		<option value="Consideration">Integrated campaign goal = consideration</option>
+		<option value="Action">Integrated campaign goal = action</option>
 		</select>
         </label>
         </p>
