Updated to 2021 source codes Offline > Event/Out Of Home Updated "T&Cs" to "T&amp;Cs" Added link cats "Red Cross Training" and "Other sites"

--- a/index.html
+++ b/index.html
@@ -683,8 +683,8 @@ $(window).load(function(){
         <p>
         <label for="sourcecode">What type of website is it?
         <select name="sourcecode" id="referralsourcecode">
-		<option value="170461">News or magazine site</option>
-		<option value="170462">Other</option>
+		<option value="175152">News or magazine site</option>
+		<option value="175153">Other</option>
 		</select>
         </label>
         </p>
@@ -721,9 +721,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -770,7 +772,7 @@ $(window).load(function(){
         <input placeholder="e.g. 123450" name="sourcecode" id="bannersourcecode5" type="text">
         </label>
         <p>
-		<input name="sourcecode" id="bannersourcecode" value="170457" type="hidden">
+		<input name="sourcecode" id="bannersourcecode" value="175148" type="hidden">
         </p>
 	</div>
 
@@ -1089,9 +1091,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1225,7 +1229,7 @@ $(window).load(function(){
         <input placeholder="e.g. 123450" name="sourcecode" id="socialadsourcecode5" type="text">
         </label>
         <p>
-		<input name="sourcecode" id="socialadsourcecode" value="170464" type="hidden">
+		<input name="sourcecode" id="socialadsourcecode" value="175155" type="hidden">
         </p>
 	</div>
     </div>
@@ -1257,7 +1261,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-		<input name="sourcecode" id="socialpostsourcecode" value="170464" type="hidden">
+		<input name="sourcecode" id="socialpostsourcecode" value="175155" type="hidden">
         </p>
         <p>
         <label for="linkcategory">What link from our site, or overall organisational goal, is being advertised?
@@ -1269,9 +1273,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1296,7 +1302,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-		<input name="sourcecode" id="socialsharesourcecode" value="170464" type="hidden">
+		<input name="sourcecode" id="socialsharesourcecode" value="175155" type="hidden">
         <label for="audience">Where is the social share button on our site?
         <select name="audience" id="socialshareaudience">
 		<option value="Donate Landing">Donate - Landing</option>
@@ -1307,9 +1313,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1326,9 +1334,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1349,11 +1359,12 @@ $(window).load(function(){
         <select name="source" id="socialbuttonsource">
 		<option value="Facebook">Facebook</option>
 		<option value="Youtube">Youtube</option>
+		<option value="LinkedIn">LinkedIn</option>
 		</select>
         </label>
         </p>
         <p>
-		<input name="sourcecode" id="socialbuttonsourcecode" value="170464" type="hidden">
+		<input name="sourcecode" id="socialbuttonsourcecode" value="175155" type="hidden">
         </p>
         <p>
         <label for="audience">Where is this social button going?
@@ -1372,9 +1383,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1405,7 +1418,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-		<input name="sourcecode" id="internalsourcecode" value="170458" type="hidden">
+		<input name="sourcecode" id="internalsourcecode" value="175149" type="hidden">
 		<input name="audience" id="internalaudience" value="BRC Site" type="hidden">
         </p>
         <p>
@@ -1418,9 +1431,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1441,14 +1456,16 @@ $(window).load(function(){
 		<option value="Direct Mail">Direct mail</option>
 		<option value="Door Drop">Door drop</option>
         <option value="DRTV">DRTV</option>
+        <option value="Event">Event (e.g. bake sale, concert)</option>
         <option value="Inserts">Inserts</option>
+        <option value="Out Of Home">Out of home</option>
         <option value="Partially Addressed Mail">Partially Addressed Mail</option>
         <option value="Press">Press</option>
 		</select>
         </label>
         </p>
         <p>
-		<input name="sourcecode" id="offlinesourcecode" value="170463" type="hidden">
+		<input name="sourcecode" id="offlinesourcecode" value="175154" type="hidden">
         </p>
         <p>
         <label for="audience">Who is seeing the offline advertising
@@ -1468,9 +1485,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1487,7 +1506,7 @@ $(window).load(function(){
 	<div id="mediumOther">
 		<p class="alert">All links made through this path will have the same source and medium as each other. Only the audience (<em>Who will see this link?</em>) and creative (<em>What's the topic of the content the link is being added to?</em>) will be different. To ensure your data can be identified in reports, be as specific as possible with those two answers.</p>
         <p>
-		<input name="sourcecode" id="othersourcecode" value="170463" type="hidden">
+		<input name="sourcecode" id="othersourcecode" value="175154" type="hidden">
         </p>
         <p>
 		<input name="source" id="othersource" value="Unknown" type="hidden">
@@ -1510,6 +1529,8 @@ $(window).load(function(){
 		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1529,7 +1550,7 @@ $(window).load(function(){
         </label>
         </p>
         <p>
-		<input name="sourcecode" id="rocketseedsourcecode" value="170463" type="hidden">
+		<input name="sourcecode" id="rocketseedsourcecode" value="175154" type="hidden">
 		<input name="audience" id="rocketseedaudience" value="Emailed by BRC" type="hidden">
 		<input name="medium" id="rocketseedmedium" value="Banner" type="hidden">
         </p>
@@ -1543,9 +1564,11 @@ $(window).load(function(){
 		<option value="First Aid">First aid</option>
 		<option value="About Us">About Us</option>
 		<option value="Shop">Shop</option>
-		<option value="Navigation">Non-section pages e.g. T&Cs, cookies, privacy</option>
+		<option value="Navigation">Non-section pages e.g. T&amp;Cs, cookies, privacy</option>
 		<option value="Blog">Blog</option>
 		<option value="Webapps">Webapps</option>
+		<option value="Red Cross Training">Red Cross Training</option>
+		<option value="Other sites">Other BRC sites (e.g. Assemble)</option>
 		<option value="Awareness">Integrated campaign goal = awareness</option>
 		<option value="Consideration">Integrated campaign goal = consideration</option>
 		<option value="Action">Integrated campaign goal = action</option>
@@ -1893,14 +1916,14 @@ $(window).load(function(){
 		if (audience1 && !audience2 && !audience3 && !audience4 && !audience5 ) {
 			var html = html.replace(/audience/g,encodeURIComponent(audience1));
 			if (ownSourceCode === "Yes") {
-				var html = html.replace(/170457|170464/g,encodeURIComponent(sourceCode1));
+				var html = html.replace(/175148|175155/g,encodeURIComponent(sourceCode1));
 			}
 		} else if (audience1 && audience2 && !audience3 && !audience4 && !audience5 ) {
 			var html1 = html.replace(/audience/g,encodeURIComponent(audience1));
 			var html2 = html.replace(/audience/g,encodeURIComponent(audience2));
 			if (ownSourceCode === "Yes") {
-				var html1 = html1.replace(/170457|170464/g,encodeURIComponent(sourceCode1));
-				var html2 = html2.replace(/170457|170464/g,encodeURIComponent(sourceCode2));
+				var html1 = html1.replace(/175148|175155/g,encodeURIComponent(sourceCode1));
+				var html2 = html2.replace(/175148|175155/g,encodeURIComponent(sourceCode2));
 			}
 			var html = html1 + "\n\n" + html2;
 		} else if (audience1 && audience2 && audience3 && !audience4 && !audience5 ) {
@@ -1908,9 +1931,9 @@ $(window).load(function(){
 			var html2 = html.replace(/audience/g,encodeURIComponent(audience2));
 			var html3 = html.replace(/audience/g,encodeURIComponent(audience3));
 			if (ownSourceCode === "Yes") {
-				var html1 = html1.replace(/170457|170464/g,encodeURIComponent(sourceCode1));
-				var html2 = html2.replace(/170457|170464/g,encodeURIComponent(sourceCode2));
-				var html3 = html3.replace(/170457|170464/g,encodeURIComponent(sourceCode3));
+				var html1 = html1.replace(/175148|175155/g,encodeURIComponent(sourceCode1));
+				var html2 = html2.replace(/175148|175155/g,encodeURIComponent(sourceCode2));
+				var html3 = html3.replace(/175148|175155/g,encodeURIComponent(sourceCode3));
 			}
 			var html = html1 + "\n\n" + html2 + "\n\n" + html3;
 		} else if (audience1 && audience2 && audience3 && audience4 && !audience5 ) {
@@ -1919,10 +1942,10 @@ $(window).load(function(){
 			var html3 = html.replace(/audience/g,encodeURIComponent(audience3));
 			var html4 = html.replace(/audience/g,encodeURIComponent(audience4));
 			if (ownSourceCode === "Yes") {
-				var html1 = html1.replace(/170457|170464/g,encodeURIComponent(sourceCode1));
-				var html2 = html2.replace(/170457|170464/g,encodeURIComponent(sourceCode2));
-				var html3 = html3.replace(/170457|170464/g,encodeURIComponent(sourceCode3));
-				var html4 = html4.replace(/170457|170464/g,encodeURIComponent(sourceCode4));
+				var html1 = html1.replace(/175148|175155/g,encodeURIComponent(sourceCode1));
+				var html2 = html2.replace(/175148|175155/g,encodeURIComponent(sourceCode2));
+				var html3 = html3.replace(/175148|175155/g,encodeURIComponent(sourceCode3));
+				var html4 = html4.replace(/175148|175155/g,encodeURIComponent(sourceCode4));
 			}
 			var html = html1 + "\n\n" + html2 + "\n\n" + html3 + "\n\n" + html4;
 		} else if (audience1 && audience2 && audience3 && audience4 && audience5 ) {
@@ -1932,11 +1955,11 @@ $(window).load(function(){
 			var html4 = html.replace(/audience/g,encodeURIComponent(audience4));
 			var html5 = html.replace(/audience/g,encodeURIComponent(audience5));
 			if (ownSourceCode === "Yes") {
-				var html1 = html1.replace(/170457|170464/g,encodeURIComponent(sourceCode1));
-				var html2 = html2.replace(/170457|170464/g,encodeURIComponent(sourceCode2));
-				var html3 = html3.replace(/170457|170464/g,encodeURIComponent(sourceCode3));
-				var html4 = html4.replace(/170457|170464/g,encodeURIComponent(sourceCode4));
-				var html5 = html5.replace(/170457|170464/g,encodeURIComponent(sourceCode5));
+				var html1 = html1.replace(/175148|175155/g,encodeURIComponent(sourceCode1));
+				var html2 = html2.replace(/175148|175155/g,encodeURIComponent(sourceCode2));
+				var html3 = html3.replace(/175148|175155/g,encodeURIComponent(sourceCode3));
+				var html4 = html4.replace(/175148|175155/g,encodeURIComponent(sourceCode4));
+				var html5 = html5.replace(/175148|175155/g,encodeURIComponent(sourceCode5));
 			}
 			var html = html1 + "\n\n" + html2 + "\n\n" + html3 + "\n\n" + html4 + "\n\n" + html5;
 		} else {
