--- a/index.html
+++ b/index.html
@@ -1241,6 +1241,7 @@ $(window).load(function(){
 		<option value="Facebook">Facebook</option>
 		<option value="Twitter">Twitter</option>
 		<option value="Instagram">Instagram</option>
+		<option value="Instagram Stories">Instagram Stories</option>
 		<option value="Youtube">Youtube</option>
 		<option value="LinkedIn">LinkedIn</option>
 		<option value="TikTok">TikTok</option>
