--- a/index.html
+++ b/index.html
@@ -710,12 +710,13 @@ $(window).load(function(){
           <option value="MediaMath">MediaMath</option>
           <option value="MiQ">MiQ</option>
           <option value="MMP">MMP</option>
+          <option value="Pinterest">Pinterest</option>
+          <option value="Playground XYZ">Playground XYZ</option>
           <option value="Snapchat">Snapchat</option>
           <option value="Spotify">Spotify</option>
           <option value="Teads">Teads</option>
           <option value="Telegraph">Telegraph</option>
           <option value="Twitch">Twitch</option>
-          <option value="Playground XYZ">Playground XYZ</option>
           <option value="Yahoo">Yahoo</option>
           <option value="Youtube">Youtube</option>
           <option value="AdYouLike">AdYouLike</option>
